--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,21 +1,20 @@
-deploy.ant.properties.file=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31952293849.properties
-file.reference.commons-codec-1.9.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\commons-codec-1.9.jar
-file.reference.commons-fileupload-1.3.2.jar-1=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\commons-fileupload-1.3.2.jar
-file.reference.commons-io-2.5.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\commons-io-2.5.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\commons-logging-1.2.jar
-file.reference.commons-net-3.5.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\commons-net-3.5.jar
-file.reference.facebook4j-core-2.4.8.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\facebook4j-core-2.4.8.jar
-file.reference.httpclient-4.5.2.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\httpclient-4.5.2.jar
-file.reference.httpcore-4.4.4.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\httpcore-4.4.4.jar
-file.reference.java-json.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\java-json.jar
-file.reference.javax.mail.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\javax.mail.jar
-file.reference.json-lib.jar=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\Desktop\\dogebox\\Librerias\\json-lib.jar
+deploy.ant.properties.file=C:\\Users\\Ubaldo\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-70929084.properties
+file.reference.commons-codec-1.9.jar=E:\\Proyectos\\dogebox\\Librerias\\commons-codec-1.9.jar
+file.reference.commons-fileupload-1.3.2.jar-1=E:\\Proyectos\\dogebox\\Librerias\\commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=E:\\Proyectos\\dogebox\\Librerias\\commons-io-2.5.jar
+file.reference.commons-net-3.5.jar=E:\\Proyectos\\dogebox\\Librerias\\commons-net-3.5.jar
+file.reference.facebook4j-core-2.4.8.jar=E:\\Proyectos\\dogebox\\Librerias\\facebook4j-core-2.4.8.jar
+file.reference.httpclient-4.5.2.jar=E:\\Proyectos\\dogebox\\Librerias\\httpclient-4.5.2.jar
+file.reference.httpcore-4.4.4.jar=E:\\Proyectos\\dogebox\\Librerias\\httpcore-4.4.4.jar
+file.reference.java-json.jar=E:\\Proyectos\\dogebox\\Librerias\\java-json.jar
+file.reference.javax.mail.jar=E:\\Proyectos\\dogebox\\Librerias\\javax.mail.jar
+file.reference.json-lib.jar=E:\\Proyectos\\dogebox\\Librerias\\json-lib.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=F:/Archivos de programa/GlassFish/glassfish/domains/dogebox
-j2ee.server.home=F:/Archivos de programa/GlassFish/glassfish
-j2ee.server.instance=[F:\\Archivos de programa\\GlassFish\\glassfish;F:\\Archivos de programa\\GlassFish\\glassfish\\domains\\dogebox]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=F:/Archivos de programa/GlassFish
+j2ee.server.domain=C:/Users/Ubaldo/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Ubaldo Torres Ju\u00e1rez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ubaldo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
