--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,6 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-codec-1.9.jar=../httpcomponents-client-4.5.2/lib/commons-codec-1.9.jar
 file.reference.commons-fileupload-1.3.2.jar-1=../../Google Drive/5K/Programaci\u00f3n distribuida/proyectoIntegrador/commons-fileupload-1.3.2.jar
-file.reference.commons-logging-1.2.jar=../httpcomponents-client-4.5.2/lib/commons-logging-1.2.jar
 file.reference.core-3.2.1.jar=Librerias\\core-3.2.1.jar
 file.reference.facebook4j-core-2.4.8.jar=facebook4j-core-2.4.8.jar
 file.reference.httpclient-4.5.2.jar=../httpcomponents-client-4.5.2/lib/httpclient-4.5.2.jar
@@ -38,6 +37,7 @@ file.reference.httpcore-4.4.4.jar=../httpcomponents-client-4.5.2/lib/httpcore-4.
 file.reference.java-json.jar=java-json.jar
 file.reference.javax.mail.jar=javax.mail.jar
 file.reference.json-lib.jar=json-lib.jar
+file.reference.mysql-connector-java-5.1.47-bin.jar=Librerias\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,17 +54,16 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.commons-net-3.5.jar}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-fileupload-1.3.2.jar-1}:\
     ${file.reference.commons-codec-1.9.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.httpcore-4.4.4.jar}:\
     ${file.reference.httpclient-4.5.2.jar}:\
     ${file.reference.java-json.jar}:\
     ${file.reference.json-lib.jar}:\
     ${file.reference.facebook4j-core-2.4.8.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.core-3.2.1.jar}
+    ${file.reference.core-3.2.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
